--- a/C++/Code/MultiThreadNetwork/HelloMemory/HelloMemory.vcxproj
+++ b/C++/Code/MultiThreadNetwork/HelloMemory/HelloMemory.vcxproj
@@ -120,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alloctor.h" />
+    <ClInclude Include="CELLObjectPool.hpp" />
     <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="MemoryMgr.hpp" />
   </ItemGroup>
