--- a/C++/Code/MultiThreadNetwork/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/C++/Code/MultiThreadNetwork/EasyTcpServer/EasyTcpServer.vcxproj
@@ -115,16 +115,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Alloctor.cpp" />
     <ClCompile Include="server.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Alloctor.h" />
-    <ClInclude Include="CELLObjectPool.hpp" />
+    <ClInclude Include="CELL.hpp" />
+    <ClInclude Include="CELLClient.hpp" />
+    <ClInclude Include="CELLServer.hpp" />
     <ClInclude Include="CELLTask.hpp" />
     <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="EasyTcpServer.hpp" />
-    <ClInclude Include="MemoryMgr.hpp" />
+    <ClInclude Include="INetEvent.hpp" />
     <ClInclude Include="MessageHeader.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
