--- a/C++/Code/MultiThreadNetwork/EasyTcpServer/EasyTcpServer.vcxproj.filters
+++ b/C++/Code/MultiThreadNetwork/EasyTcpServer/EasyTcpServer.vcxproj.filters
@@ -47,5 +47,17 @@
     <ClInclude Include="CELLSemaphore.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CELLBuffer.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLLog.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLNetWork.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLThread.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
