--- a/C++/Code/MultiThreadNetwork/EasyTcpServer/EasyTcpServer.vcxproj.filters
+++ b/C++/Code/MultiThreadNetwork/EasyTcpServer/EasyTcpServer.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
     <Filter Include="头文件">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
+      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
     <Filter Include="资源文件">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
@@ -18,46 +18,5 @@
     <ClCompile Include="server.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="MessageHeader.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="EasyTcpServer.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CELLTimestamp.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CELLTask.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CELLClient.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CELL.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="INetEvent.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CELLServer.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CELLSemaphore.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CELLBuffer.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CELLLog.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CELLNetWork.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CELLThread.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
