--- a/C++/Code/MultiThreadNetwork/HelloThread/HelloThread.vcxproj.filters
+++ b/C++/Code/MultiThreadNetwork/HelloThread/HelloThread.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
     <Filter Include="头文件">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
+      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
     <Filter Include="资源文件">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
@@ -15,22 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CELLTimestamp.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="main1.cpp">
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CELLTimestamp.hpp">
       <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="main2.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="main3.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
+    </ClInclude>
   </ItemGroup>
 </Project>
